# OrthancDemo

./: .gitignore  OrthancDemo.code-workspace
OrthancFramework/Resources/CMake/: AutoGeneratedCode.cmake  BoostConfiguration.cmake  BoostConfigurationStatic-1.69.0.cmake  Compiler.cmake  DownloadPackage.cmake  JsonCppConfiguration.cmake  LibIconvConfiguration.cmake  LibIcuConfiguration.cmake  OrthancFrameworkConfiguration.cmake  OrthancFrameworkParameters.cmake  PugixmlConfiguration.cmake  SQLiteConfiguration.cmake  UuidConfiguration.cmake  VisualStudioPrecompiledHeaders.cmake
OrthancFramework/Resources/CodeGeneration/: ErrorCodes.json  GenerateErrorCodes.py
OrthancFramework/Sources/: ChunkedBuffer.cpp  ChunkedBuffer.h  Compatibility.h  Endianness.h  EnumerationDictionary.h  Enumerations.cpp  Enumerations.h  Enumerations_TransferSyntaxes.impl.h  FileBuffer.h  IDynamicObject.h  IMemoryBuffer.h  Logging.cpp  Logging.h  OrthancException.cpp  OrthancException.h  OrthancFramework.h  PrecompiledHeaders.cpp  PrecompiledHeaders.h  StringMemoryBuffer.cpp  StringMemoryBuffer.h  SystemToolbox.cpp  SystemToolbox.h  TemporaryFile.cpp  TemporaryFile.h  Toolbox.cpp  Toolbox.h
OrthancFramework/Sources/Cache/: ICachePageProvider.h  ICacheable.h  LeastRecentlyUsedIndex.h  MemoryCache.cpp  MemoryCache.h  MemoryObjectCache.cpp  MemoryObjectCache.h  MemoryStringCache.cpp  MemoryStringCache.h  SharedArchive.cpp  SharedArchive.h
OrthancFramework/Sources/DicomFormat/: DicomArray.cpp  DicomArray.h  DicomElement.cpp  DicomElement.h  DicomImageInformation.cpp  DicomImageInformation.h  DicomInstanceHasher.cpp  DicomInstanceHasher.h  DicomIntegerPixelAccessor.cpp  DicomIntegerPixelAccessor.h  DicomMap.cpp  DicomMap.h  DicomPath.cpp  DicomPath.h  DicomStreamReader.h  DicomTag.cpp  DicomTag.h  DicomValue.cpp  DicomValue.h  StreamBlockReader.cpp  StreamBlockReader.h
OrthancFramework/Sources/FileStorage/: FileInfo.cpp  FileInfo.h  FilesystemStorage.cpp  FilesystemStorage.h  IStorageArea.h
OrthancServer/: CMakeLists.txt
OrthancServer/Sources/: OrthancInitialization.h  PrecompiledHeadersServer.cpp  PrecompiledHeadersServer.h  ServerEnumerations.h  main.cpp
OrthancServer/UnitTestsSources/: PrecompiledHeadersUnitTests.cpp  PrecompiledHeadersUnitTests.h
